[package]
name = "quic-speed"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "^0.1.7", features = ["http1", "http2", "tokio"] }
http-body-util = "0.1.2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "ring", "rustls", "runtime-tokio"] }
net2 = "0.2"
ring = "0.17"
log = "0.4"
threadpool = "1.8"
parking_lot = "0.12"
futures-util = "0.3"
tokio-rustls = "0.26"
x509-parser = "0.16"
serde_json = "1.0"
http-body = "1.0"
socket2 = "0.5"

# feature: config
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# feature: build-binaries
syslog = { version = "7.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
signal-hook = { version = "0.3", optional = true }
rustls-pemfile = "2.1.3"

[features]
default = ["build-binaries", "client", "server"]
config = ["dep:serde", "dep:toml"]
client = ["hyper/client", "hyper-util/client"]
server = ["hyper/server", "hyper-util/server-auto"]
build-binaries = ["config", "client", "server", "dep:syslog", "dep:clap", "dep:signal-hook"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
